<resources>
    <string name="app_name">Plog</string>
    <string name="facebook_app_id">388771481319946</string>


    <string name="title_plays">Plays</string>
    <string name="title_players">Players</string>
    <string name="title_games">Games</string>
    <string name="title_statistics">Statistics</string>
    <string name="title_settings">Settings</string>
    <string name="title_exit">Exit</string>
    <string name="title_play_detail">Play Detail</string>
    <string name="title_bucket_list">Bucket List</string>

    <string name="title_pref_support">Support</string>
    <string name="title_pref_send_debug">Send Debug Information</string>
    <string name="title_pref_sync_plays">Sync Plays</string>
    <string name="title_pref_backup">Backup</string>
    <string name="title_export_db">Export Database</string>
    <string name="title_import_db">Import Database</string>
    <string name="db_exported">Database Exported</string>
    <string name="db_exported_1">"Database has been exported to "</string>
    <string name="db_exported_2">".  Place it in the same directory on your new device to import."</string>
    <string name="syncing_plays">Syncing Plays</string>

    <string name="less_than_a_day_ago">Less than a day ago</string>
    <string name="days_ago_label">" days ago"</string>
    <string name="day_ago_label">" day ago"</string>
    <string name="added">"Added: "</string>
    <string name="year_label">Year:</string>
    <string name="personal_best_label">"Best: "</string>
    <string name="last_play_label">"Last Played: "</string>
    <string name="played_label">"Played: "</string>
    <string name="add_bucket_list">Add to Bucket List</string>
    <string name="remove_bucket_list">Remove from Bucket List</string>
    <string name="add_player">Add Player</string>
    <string name="delete_player">Delete Player</string>
    <string name="add_play">Add Play</string>
    <string name="edit_play">Edit Play</string>
    <string name="delete_play">Delete Play</string>
    <string name="share_play">Share Play</string>
    <string name="edit_player">Edit Player</string>
    <string name="add_group">Add Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="add_game">Add Game</string>
    <string name="filter">"Filter "</string>
    <string name="filter_games">" Games"</string>
    <string name="filter_plays">" Plays"</string>
    <string name="calculating">Calculating...</string>
    <string name="initGroup">Initializing Group...</string>
    <string name="add_tenbyten">Add to 10x10</string>
    <string name="update_bgg">Update Info via BGG</string>
    <string name="open_bgg">Open on BGG</string>
    <string name="add_bgg">Add to BGG Collection</string>
    <string name="groups">Groups:</string>
    <string name="groups_header">Groups</string>
    <string name="removeGroup">"Removing Group: "</string>
    <string name="plays_for">"Plays for: "</string>
    <string name="select_group">" - Select a Group - "</string>
    <string name="error_bgg_login">Cannot log into BGG.  Please confirm that your log-in credientals are correct for the currently selected default player within the \"Players\" subsection</string>

    <string name="show_expansions">Show Expansions</string>
    <string name="hide_expansions">Hide Expansions</string>
    <string name="unable_remove_game">Unable to remove played games</string>
    <string name="unable_find_game">Unable to find game on BGG.</string>

    <string name="is_expansion">Is Expansion</string>
    <string name="color">Color</string>
    <string name="score">Score</string>
    <string name="date">Date</string>
    <string name="game_exp">Game (and Expansions)</string>
    <string name="expansions">Expansions</string>
    <string name="view_plays">View Plays</string>
    <string name="copy_play">Copy Play</string>
    <string name="view_wins">View Wins</string>
    <string name="winners">"Winner: "</string>
    <string name="plays">"Plays: "</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="action_add_play">Add Play</string>

    <string name="action_settings">Settings</string>

    <string name="element_text">Element</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bgg_username">BGG Username</string>
    <string name="bgg_password">BGG Password</string>
    <string name="name">Name</string>
    <string name="game_name">Game Name</string>
    <string name="game_notes">Game Notes</string>
    <string name="group_name">Group Name</string>
    <string name="choose_year">Choose Year</string>
    <string name="choose_expansions">Choose Expansions</string>
    <string name="choose_version">Choose Version</string>
    <string name="play_date">Play Date:</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="game_photo">Game Photo:</string>
    <string name="name_taken">Name taken</string>
    <string name="choose_location">Where are you?</string>
    <string name="are_you_at">"Are you at "</string>
    <string name="add_new">Add New</string>
    <string name="enter_location_name">Enter Location Name</string>
    <string name="location_name_exists">Location Name already exits.  Please try again.</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="tab0">Wins</string>
    <string name="tab1">10x10</string>

    <string name="title_location">Location:</string>
    <string name="setLocation">Set Location</string>
    <string name="add_to_bgg">Add to BGG</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="choose_task">Choose:</string>
    <string name="default_player">Default User</string>
    <string name="default_color">Default Color:</string>
    <string name="choose_groups">Choose Group(s)</string>
    <string name="contacting_the_geek">Contacting the Geek...</string>
    <string name="setting_up">Setting up...</string>
    <string name="next">Next</string>
    <string name="prev">Previous</string>
    <string name="finish">Get Started</string>
    <string name="review">Review</string>
    <string name="loading_text">Loading...</string>
    <string name="setup_info">Enter your name.  You will be the first player entered.  Your BGG Name will be used to pull your collection.</string>
    <string name="label_your_name">Name</string>
    <string name="label_your_email">BGG Username</string>
    <string name="label_your_password">BGG Password</string>
    <string name="hint_your_name">e.g. Adam</string>
    <string name="hint_your_email">Optional</string>
    <string name="hint_your_password">Optional</string>
    <string name="posting_play">Posting Play to BGG...</string>
    <string name="add_box_photo">Add Box Photo</string>
    <string name="view_box_photo">View Box Photo</string>
    <string name="everyone">Everyone</string>

    <string name="submit_confirm_message">Start adding players and games, creating groups, and plogging!</string>
    <string name="submit_confirm_button">Go!</string>

    <string name="bgg_process_notice">BGG is processing this request.  Try again if your collection is not updated.</string>

    <string name="no_default_player">There isn\'t a default player set.  Go to Players and set a player as default.</string>

    <string name="confirm_delete_game">Are you sure you want to delete this game?</string>
    <string name="confirm_delete_group">Are you sure you want to delete this group?</string>
    <string name="confirm_delete_player">Are you sure you want to delete this player?</string>
    <string name="confirm_delete_play">Are you sure you want to delete this play?</string>

    <string name="undo">Undo</string>
    <string name="added_to_bl">" added to Bucket List"</string>
    <string name="removed_from_bl">" removed from Bucket List"</string>

    <string name="error">Error</string>
    <string name="notify_0_text">You must have at least one player in a play.</string>

    <string-array name="color_choices">
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Red</item>
        <item>Black</item>
        <item>White</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Natural</item>
        <item>Grey</item>
        <item>Brown</item>
        <item>Gold</item>
        <item>Silver</item>
        <item>Bronze</item>
        <item>None</item>
    </string-array>

    <string name="total_plays">"Total Plays: "</string>
    <string name="unique_games">"Unique Games: "</string>
    <string name="unplayed_games">"Unplayed Games: "</string>
    <string name="wins">"Wins: "</string>
    <string name="stats_regular_wins">Regular Wins</string>
    <string name="stats_asterisk_wins">Asterisk Wins</string>
    <string name="stats_total_plays">Total Plays</string>
    <string name="stats_unique_plays">Unique Games</string>
    <string name="stats_unplayed_games">Unplayed Games</string>
    <string name="stats_total_wins">Total Wins</string>
    <string name="stats_shared_wins">Shared Wins</string>
    <string name="stats_total_losses">Total Losses</string>
    <string name="percentage">" Percentage"</string>
    <string name="version_label">"Version: "</string>
    <string name="percent_completed">"Percent Completed: "</string>
    <string name="random_game">Random Game</string>
    <string name="none">None</string>
    <string name="random_game_to_play">"You should play "</string>

    <string name="sort_az">Alpha (A->Z)</string>
    <string name="sort_za">Alpha (Z->A)</string>
    <string name="sort_date_newold">Date (New->Old)</string>
    <string name="sort_date_oldnew">Date (Old->New)</string>
    <string name="sort_plays_x0">Plays (X->0)</string>
    <string name="sort_plays_0x">Plays (0->X)</string>
    <string name="sort_last_played_newold">Last Played (New->Old)</string>
    <string name="sort_last_played_oldnew">Last Played (Old->New)</string>

    <string name="sort">Sort</string>
    <string name="delete_game_bgg">Delete game from BGG?</string>
    <string name="view_image">View Image</string>

    <string name="title_pref_behavior">App Behavior</string>
    <string name="title_solo_remove_bucket_list">Remove Solo Plays from Bucket List</string>
    <string name="title_last_used_location">Default to last used location</string>
    <string name="title_bucket_list_weight">Weigh Random Bucket List Games</string>
    <string name="summary_bucket_list_weight">Games are weighted according to how long ago they were added</string>


</resources>
