<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/view_plays" android:title="@string/view_plays"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/copy_play" android:title="@string/copy_play"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/edit_play" android:title="@string/edit_play"
        app:showAsAction="withText|ifRoom" />
    <item android:id="@+id/delete_play" android:title="@string/delete_play"
        app:showAsAction="withText|ifRoom" />
    <!--<item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" app:showAsAction="never" />-->
</menu>
