<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.lastsoft.plog.AddPlayerFragment" android:clickable="true">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|textCapWords"
            android:ems="10"
            android:id="@+id/gameName"
            android:hint="@string/game_name" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/is_expansion"
            android:layout_marginBottom="@dimen/margin_small"
            android:id="@+id/expansionFlag"
            android:checked="false"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_to_bgg"
            android:layout_marginBottom="@dimen/margin_small"
            android:id="@+id/addToBGG"
            android:checked="false"/>


        <Button
            android:id="@+id/button"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/add_game"
            android:textColor="@color/black"
            android:layout_marginBottom="16dp"
            android:layout_gravity="center_horizontal|bottom"
            />
    </LinearLayout>
</FrameLayout>
