<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.lastsoft.plog.AddPlayerFragment"
    android:clickable="true"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:linksClickable="true"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName|textCapWords"
                android:ems="10"
                android:id="@+id/groupName"
                android:layout_marginBottom="16dp"
                android:hint="@string/group_name" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_player"
                android:textColor="@color/black"
                android:id="@+id/addButton"
                />

            <LinearLayout android:id="@+id/container_players"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:showDividers="middle"
                android:divider="?android:dividerHorizontal"
                android:animateLayoutChanges="true"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />

            <Button
                android:id="@+id/deleteButton"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/delete_group"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center_horizontal|bottom"
                />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
